--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "next": "11.0.1",
+    "papaparse": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-geolocated": "^3.2.0"
