--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "papaparse": "^5.3.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-geolocated": "^3.2.0"
+    "react-geolocated": "^3.2.0",
+    "react-icons": "^4.2.0"
   },
   "devDependencies": {
     "eslint": "7.30.0",
