--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "next": "11.0.1",
     "papaparse": "^5.3.1",
     "react": "17.0.2",
